# College_Accounting

./: .gitignore  pyproject.toml
college_accounting/: database.py  main.py  models.py  отчет_платежи_2023-04-01_2026-04-29.xlsx
college_accounting/college_accounting/: main.py  models.py  seed.py
college_accounting/college_accounting/services/: __init__.py  contract_service.py  payment_service.py  student_service.py
college_accounting/college_accounting/views/: __init__.py  main_view.py
college_accounting/services/: __init__.py  equipment_service.py  room_service.py  user_service.py
college_accounting/views/: __init__.py  login_view.py  main_view.py
