[project]
name = "Colage_Accounting"
version = "0.1.0"
description = ""
authors = [
    {name = "WaintGarner",email = "rgotko26@gmail.com"}
]

package-mode = false

requires-python = ">=3.13"
dependencies = [
    "black (>=26.3.1,<27.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "flet (>=0.84.0,<0.85.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]
